github-readme-stats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-readme-stats
  namespace: github-readme-stats
  labels:
    app: github-readme-stats
spec:
  selector:
    app: github-readme-stats
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  type: ClusterIP
