github-readme-stats/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-readme-stats-external
  namespace: github-readme-stats
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https-legacy-k
  hostnames:
    - github-readme-stats.k.shion1305.com
  rules:
    - backendRefs:
        - name: github-readme-stats
          port: 9000
